--- a/adhocs/load_data_polars.ipynb
+++ b/adhocs/load_data_polars.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import polars as pl\n",
     "import json\n",
     "import gzip"
@@ -910,6 +909,15 @@
     "df = df.with_columns(df['created_at'].str.strptime(pl.Datetime, \"%Y-%m-%dT%H:%M:%SZ\").alias('created_at'))\n",
     "df = df.drop('public')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write_parquet('./2022-01-01-0.parquet', compression='snappy')"
    ]
   },
   {
